# pico-playground

./: .gitignore  CMakeLists.txt  README.md  example_auto_set_url.cmake  pico_extras_import.cmake  playground_auto_set_url.cmake
apps/: CMakeLists.txt
apps/popcorn/: CMakeLists.txt  README.md  atlantis.c  font.h  lcd12.c  lcd18.c  popcorn.c
apps/popcorn/converter/: CMakeLists.txt  README.md
apps/popcorn/converter/src/: convert.cpp
apps/usb_sound_card/: CMakeLists.txt  usb_sound_card.c
apps/usb_sound_card/lufa/: LICENSE.TXT
audio/: CMakeLists.txt
audio/sine_wave/: CMakeLists.txt  sine_wave.c
net/: CMakeLists.txt
net/usb_host_webserver/: CMakeLists.txt  lwipopts.h  main.c  tusb_config.h
reset/: CMakeLists.txt
reset/hello_reset/: CMakeLists.txt  hello_reset.c
scanvideo/: CMakeLists.txt
scanvideo/demo1/: CMakeLists.txt  data.c  data.h  demo1.c
scanvideo/demo2/: CMakeLists.txt  data2.c  data2.h  demo2.c
scanvideo/flash_stream/: CMakeLists.txt  flash_stream.c
scanvideo/flash_stream/img/: .gitignore  LICENSE.txt  pack.sh  packtiles
scanvideo/hscroll_dma_tiles/: CMakeLists.txt  data.c  data.h  hscroll_dma_tiles.c  level0.h
scanvideo/mandelbrot/: CMakeLists.txt  mandelbrot.c
scanvideo/mario_tiles/: CMakeLists.txt  data.c  mario_tiles.c
scanvideo/render/: CMakeLists.txt  README.md  image.c  image.h  spans.c  spans.h
scanvideo/scanvideo_minimal/: CMakeLists.txt  scanvideo_minimal.c
scanvideo/sprite/: CMakeLists.txt  affine_transform.h  sprite.S  sprite.c  sprite.h
scanvideo/sprite_demo/: CMakeLists.txt  raspberry_128x128_bgar5515.h  raspberry_128x128_bgar5515_flip.h  sprite_demo.c
scanvideo/test_pattern/: CMakeLists.txt  test_pattern.c
scanvideo/textmode/: CMakeLists.txt  font.h  font10.c  font6.c  font8.c  lcd.c  textmode.c
schematics/: README.md
sleep/: CMakeLists.txt
sleep/hello_dormant/: CMakeLists.txt  hello_dormant.c  hello_dormant_aon.c  hello_dormant_gpio.c
sleep/hello_sleep/: CMakeLists.txt  hello_sleep.c  hello_sleep_alarm.c  hello_sleep_aon.c
standalone/: README.md
standalone/static_sdk/: CMakeLists.txt
stdio/: CMakeLists.txt
stdio/pio/: CMakeLists.txt  stdio_pio.c
wifi_settings_connect/example/: CMakeLists.txt  README.md  example.c  lwipopts.h
